data/Java/04-string-access-by-index/6/[M]Error.txt
https://stackoverflow.com/questions/23983541/compiler-error-array-required-but-java-lang-string-found
a.java:42: error: array required, but String found
                temp[remainder] = Integer.parseInt(numbers[i]);
                                                          ^